# easy-py-launcher

./: README.MD  README.md  pyproject.toml
src/simple_launcher_jp/: activate_venv.py  init_wizard.py  main.py  run.py
src/simple_launcher_jp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
