[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_launcher_jp"
version = "0.0.2"
authors = [
  { name="jean-piere", email="devjeanpiere@gmail.com" },
]
description = "An easy python launcher with a little bit npm vibe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jpcraft-jp/easy-py-launcher"
Issues = "https://github.com/jpcraft-jp/easy-py-launcher/issues"

[project.scripts]
pyrun = "simple_launcher_jp.main:main"